tests/rosetta/out/Rust/brilliant-numbers.error
rustc: exit status 1
error[E0434]: can't capture dynamic environment in a fn item
   --> /tmp/brilliant-numbers.rs:115:17
    |
115 |         let r = getBrilliant(2, 10000, false);
    |                 ^^^^^^^^^^^^
    |
    = help: use the `|| { ... }` closure form instead

error[E0434]: can't capture dynamic environment in a fn item
   --> /tmp/brilliant-numbers.rs:130:22
    |
130 |             let r2 = getBrilliant(k, limit, true);
    |                      ^^^^^^^^^^^^
    |
    = help: use the `|| { ... }` closure form instead

error[E0308]: mismatched types
   --> /tmp/brilliant-numbers.rs:109:116
    |
68  |     let getBrilliant = move |digits: i32, limit: i32, countOnly: bool| -> std::collections::HashMap<&'static str, i32> {
    |                                                                           -------------------------------------------- expected `HashMap<&'static str, i32>` because of return type
...
109 |             return { let mut m = std::collections::BTreeMap::new(); m.insert("bc", count); m.insert("next", next); m };
    |                                                                                                                    ^ expected `HashMap<&str, i32>`, found `BTreeMap<&str, i32>`
    |
    = note: expected struct `HashMap<&'static str, i32>`
               found struct `BTreeMap<&str, i32>`

error[E0308]: mismatched types
   --> /tmp/brilliant-numbers.rs:111:109
    |
111 |         return { let mut m = std::collections::BTreeMap::new(); m.insert("bc", brilliant); m.insert("next", next); m };
    |                                                                 -              ---------     ------         ^^^^ expected `Vec<i32>`, found `i32`
    |                                                                 |              |             |
    |                                                                 |              |             arguments to this method are incorrect
    |                                                                 |              this argument has type `Vec<i32>`...
    |                                                                 ... which causes `m` to have type `BTreeMap<&str, Vec<i32>>`
    |
    = note: expected struct `Vec<i32>`
                 found type `i32`
help: the return type of this call is `i32` due to the type of the argument passed
   --> /tmp/brilliant-numbers.rs:111:92
    |
111 |         return { let mut m = std::collections::BTreeMap::new(); m.insert("bc", brilliant); m.insert("next", next); m };
    |                                                                                            ^^^^^^^^^^^^^^^^^----^
    |                                                                                                             |
    |                                                                                                             this argument influences the return type of `insert`
note: method defined here
   --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/alloc/src/collections/btree/map.rs:1023:12

error[E0308]: mismatched types
   --> /tmp/brilliant-numbers.rs:111:116
    |
68  |     let getBrilliant = move |digits: i32, limit: i32, countOnly: bool| -> std::collections::HashMap<&'static str, i32> {
    |                                                                           -------------------------------------------- expected `HashMap<&'static str, i32>` because of return type
...
111 |         return { let mut m = std::collections::BTreeMap::new(); m.insert("bc", brilliant); m.insert("next", next); m };
    |                                                                                                                    ^ expected `HashMap<&str, i32>`, found `BTreeMap<&str, Vec<i32>>`
    |
    = note: expected struct `HashMap<&'static str, i32>`
               found struct `BTreeMap<&str, Vec<i32>>`

error[E0308]: mismatched types
  --> /tmp/brilliant-numbers.rs:65:16
   |
58 |     fn commatize(n: i32) -> &'static str {
   |                             ------------ expected `&'static str` because of return type
...
65 |         return s;
   |                ^ expected `&str`, found `String`
   |
help: consider borrowing here
   |
65 |         return &s;
   |                +

error[E0599]: no method named `padStart` found for struct `String` in the current scope
   --> /tmp/brilliant-numbers.rs:120:90
    |
120 | ...   println!("{}", vec![format!("{}", format!("{}{}", br[i as usize].to_string().padStart(4, " "), " ")), format!("{}", if false {1} el...
    |                                                                                    ^^^^^^^^ method not found in `String`

error[E0425]: cannot find function `pow` in this scope
   --> /tmp/brilliant-numbers.rs:129:25
    |
129 |             let limit = pow(10, k);
    |                         ^^^ not found in this scope

error[E0599]: no method named `padStart` found for reference `&str` in the current scope
   --> /tmp/brilliant-numbers.rs:136:147
    |
136 | ...mat!("{}{}", format!("{}{}", "First >= ", climit.padStart(18, " ")), " is "), ctotal.padStart(14, " ")), " in the series: "), cnext.pa...
    |                                                     ^^^^^^^^ method not found in `&str`

error[E0599]: no method named `padStart` found for reference `&str` in the current scope
   --> /tmp/brilliant-numbers.rs:136:183
    |
136 | ...>= ", climit.padStart(18, " ")), " is "), ctotal.padStart(14, " ")), " in the series: "), cnext.padStart(18, " ")))].into_iter().filte...
    |                                                     ^^^^^^^^ method not found in `&str`

error[E0599]: no method named `padStart` found for reference `&str` in the current scope
   --> /tmp/brilliant-numbers.rs:136:230
    |
136 | ...l.padStart(14, " ")), " in the series: "), cnext.padStart(18, " ")))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join("...
    |                                                     ^^^^^^^^ method not found in `&str`

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0308, E0425, E0434, E0599.
For more information about an error, try `rustc --explain E0308`.
